sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var swapped: Boolean;
            ^